# Nova

./: .gitignore  CMakeLists.txt  Makefile
cmake/Modules/: FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake
example/: main.cpp  main.h  prog.cpp  read.cpp
include/: camera.h  colour.h  context.h  drawable.h  fpsCounter.h  nova.h  points.h  program.h  program2.h  renderable.h  shader.h  std.h  window.h
src/: colour.cpp  context.cpp  fpsCounter.cpp  nova.cpp  points.cpp  program.cpp  program2.cpp  shader.cpp  std.cpp  window.cpp
src/cpp/: learn.cpp  test.cpp  window.cpp  windows.cpp
src/hpp/: nova.hpp  std.hpp  window.hpp  windows.hpp
tests/: test.cpp
